grid-gap-fixing

--- a/css/style.css
+++ b/css/style.css
@@ -341,7 +341,7 @@ player section
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: auto;
-        grid-gap: 20px;
+        grid-gap:12px;
         justify-items: center;
         margin-top: 70px;
         margin-bottom: 65px;  
